--- a/.eslintrc
+++ b/.eslintrc
@@ -1,69 +1,38 @@
 {
-    "extends": ["airbnb", "prettier", "prettier/react", "react-app"],
-    "parser": "babel-eslint",
-    "parserOptions": {
-        "ecmaVersion": 8,
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "impliedStrict": true,
-            "classes": true
-        }
-    },
-    "env": {
-        "browser": true,
-        "node": true,
-        "jquery": true,
-        "jest": true
-    },
+    "extends": [
+        "airbnb",
+        "plugin:prettier/recommended",
+        "prettier/react",
+        "react-app"
+    ],
     "rules": {
         "no-debugger": 0,
+        "no-console": 0,
+        "import/prefer-default-export": 0,
+        "import": 0,
+        "func-names": 0,
         "no-unused-vars": [
             1,
             {
                 "argsIgnorePattern": "res|next|^err"
             }
         ],
-        "arrow-body-style": [2, "as-needed"],
-        "no-unused-expressions": [
-            2,
-            {
-                "allowTaggedTemplates": true
-            }
-        ],
+        "no-underscore-dangle": 0,
+        "comma-dangle": 0,
         "no-param-reassign": [
             2,
             {
                 "props": false
             }
         ],
-        "no-console": 0,
-        "import/prefer-default-export": 0,
-        "import": 0,
-        "func-names": 0,
-        "space-before-function-paren": 0,
-        "comma-dangle": 0,
-        "max-len": 0,
-        "import/extensions": 0,
-        "no-underscore-dangle": 0,
-        "consistent-return": 0,
-        "react/display-name": 1,
-        "react/react-in-jsx-scope": 0,
-        "react/prefer-stateless-function": 0,
         "react/forbid-prop-types": 0,
-        "react/no-unescaped-entities": 0,
-        "jsx-a11y/accessible-emoji": 0,
+        "react/prop-types": 0,
+        "react/require-default-props": 0,
+        "react/no-array-index-key": 0,
         "react/jsx-filename-extension": [
             1,
             {
                 "extensions": [".js", ".jsx"]
-            }
-        ],
-        "radix": 0,
-        "no-shadow": [
-            2,
-            {
-                "hoist": "all",
-                "allow": ["resolve", "reject", "done", "next", "err", "error"]
             }
         ],
         "quotes": [
@@ -79,7 +48,8 @@
             {
                 "trailingComma": "es5",
                 "singleQuote": true,
-                "printWidth": 120
+                "printWidth": 120,
+                "tabWidth": 4
             }
         ],
         "jsx-a11y/href-no-hash": "off",
@@ -89,6 +59,5 @@
                 "aspects": ["invalidHref"]
             }
         ]
-    },
-    "plugins": ["prettier"]
+    }
 }
