--- a/package.json
+++ b/package.json
@@ -1,43 +1,40 @@
 {
-  "name": "epiclient",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^1.0.0",
-    "@material-ui/icons": "^1.0.0",
-    "history": "^4.7.2",
-    "nprogress": "^0.2.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-observable": "^1.0.0-alpha.2",
-    "rxjs": "^6.1.0"
-  },
-  "scripts": {
-    "start": "PORT=3001 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "precommit": "pretty-quick --staged"
-  },
-  "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "husky": "^0.14.3",
-    "prettier": "^1.12.1",
-    "pretty-quick": "^1.4.1"
-  }
+    "name": "epiclient",
+    "version": "1.0.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^1.0.0",
+        "@material-ui/icons": "^1.0.0",
+        "history": "^4.7.2",
+        "nprogress": "^0.2.0",
+        "prop-types": "^15.6.1",
+        "react": "^16.3.1",
+        "react-dom": "^16.3.1",
+        "react-loadable": "^5.4.0",
+        "react-redux": "^5.0.7",
+        "react-router-dom": "^4.2.2",
+        "react-router-redux": "^5.0.0-alpha.9",
+        "react-scripts": "1.1.4",
+        "redux": "^4.0.0",
+        "redux-observable": "^1.0.0-alpha.2",
+        "rxjs": "^6.1.0"
+    },
+    "scripts": {
+        "start": "PORT=3001 react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "devDependencies": {
+        "eslint": "^4.19.1",
+        "eslint-config-airbnb": "^16.1.0",
+        "eslint-config-prettier": "^2.9.0",
+        "eslint-config-react-app": "^2.1.0",
+        "eslint-plugin-flowtype": "^2.46.3",
+        "eslint-plugin-import": "^2.11.0",
+        "eslint-plugin-jsx-a11y": "^6.0.3",
+        "eslint-plugin-prettier": "^2.6.0",
+        "eslint-plugin-react": "^7.7.0",
+        "prettier": "^1.12.1"
+    }
 }
